# SPDX-FileCopyrightText: 2026 Vector Informatik GmbH
#
# SPDX-License-Identifier: MIT

# Bazel helper package: config settings, macros, and platform definitions.

package(default_visibility = ["//visibility:public"])

# ---------------------------------------------------------------------------
# Dashboard toggle
# ---------------------------------------------------------------------------
# Usage: --define dashboard=true (default) or --define dashboard=false
config_setting(
    name = "dashboard_enabled",
    define_values = {"dashboard": "true"},
)

config_setting(
    name = "dashboard_disabled",
    define_values = {"dashboard": "false"},
)

# ---------------------------------------------------------------------------
# OS config settings (convenience aliases)
# ---------------------------------------------------------------------------
config_setting(
    name = "is_linux",
    constraint_values = ["@platforms//os:linux"],
)

config_setting(
    name = "is_windows",
    constraint_values = ["@platforms//os:windows"],
)

config_setting(
    name = "is_macos",
    constraint_values = ["@platforms//os:macos"],
)

# is_qnx matches when --define qnx=true is set AND the platform is Linux-based.
# Including @platforms//os:linux makes this a strict superset of is_linux,
# so Bazel's select() specialisation prefers is_qnx over is_linux when both
# match.  The define is set by the parent workspace's .bazelrc.
config_setting(
    name = "is_qnx",
    define_values = {"qnx": "true"},
    constraint_values = ["@platforms//os:linux"],
)

# ---------------------------------------------------------------------------
# Data-file test wrapper
# ---------------------------------------------------------------------------
exports_files(["run_with_data.sh"])

# ---------------------------------------------------------------------------
# Functional smoke test  (M9 – Binary Parity Verification)
# ---------------------------------------------------------------------------
# Verifies that the Bazel-built libSilKit.so and sil-kit-registry are
# functionally equivalent to the CMake-built artefacts:
#   - SONAME, C API symbol exports, dynamic dependencies
#   - Registry start / listen / shutdown
#
# Run:  bazel test //bazel:smoke_test
# ---------------------------------------------------------------------------
sh_test(
    name = "smoke_test",
    srcs = ["smoke_test.sh"],
    args = [
        "$(location //Utilities/SilKitRegistry:sil-kit-registry)",
        "$(location //SilKit/source:SilKit)",
    ],
    data = [
        "//Utilities/SilKitRegistry:sil-kit-registry",
        "//SilKit/source:SilKit",
    ],
    size = "medium",
    tags = ["smoke"],
)
